--- a/messenger/app/views/tag/_form.html.erb
+++ b/messenger/app/views/tag/_form.html.erb
@@ -1,7 +1,2 @@
 
-<%= form_for(@tag, url: tag_path) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.submit "Save changes" %>
-<% end %>
+<p<%= link_to "Tags", tag_path %></p>
