--- a/messenger/app/views/tag/new.html.erb
+++ b/messenger/app/views/tag/new.html.erb
@@ -1,3 +1,8 @@
 <h1>New Tag</h1>
 
-<%= render 'form' %>
+<%= form_for(@tag) do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.submit "Create" %>
+<% end %>
