--- a/messenger/app/views/tag/new.html.erb
+++ b/messenger/app/views/tag/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Tag</h1>
 
-<%= form_for(@tag) do |f| %>
+<%= form_for @tag, url: '/tag'  do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
