--- a/messenger/app/views/tag/edit.html.erb
+++ b/messenger/app/views/tag/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit Tag</h1>
+<%= render 'header' %>
+
+<h2>Edit Tag</h2>
 
 <%= form_for(@tag, url: tag_path) do |f| %>
   <%= f.label :name %>
