--- a/messenger/app/views/layouts/application.html.erb
+++ b/messenger/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <h1>Messenger with RAILSINGER-Z</h1>
+    <%= Time.now %>
+    <hr>
+
     <%= yield %>
   </body>
 </html>
