ROR 17 asociaciones OK

--- a/messenger/app/views/tag/index.html.erb
+++ b/messenger/app/views/tag/index.html.erb
@@ -8,6 +8,7 @@
 <% @tags.each do |i| %>
   <tr>
     <td><%= i.name %></td>
+    <td>(Messages <%= i.messages.count %>) |</td>
     <td>
       <%= link_to "Show", tag_path(i) %> |
       <%= link_to "Edit", edit_tag_path(i) %> |
